RTC6/RTC6 Files/Linux/debian-bullseye/usr/share/scanlab/examples/1/scanlab/rtc6.h

    typedef int32_t LONG;     //  LONG  is assumed to be 4 Bytes
    typedef uint32_t UINT;     //  UINT  is assumed to be 4 Bytes
RTC6_API void __stdcall list_until(const UINT Number);
RTC6_API void __stdcall range_checking(const UINT HeadNo, const UINT Mode, const UINT Data);
RTC6_API void __stdcall store_timestamp_counter_list(void);
RTC6_API void __stdcall wait_for_timestamp_counter(const UINT TimeStampCounter);
RTC6_API void __stdcall wait_for_timestamp_counter_mode(const UINT TimeStampCounter, const UINT Mode);
RTC6_API void __stdcall wait_for_timestamp_counter_long(const UINT WaitCounterL, const UINT WaitCounterH, const UINT MaxWaitTime, const UINT Mode);
RTC6_API void __stdcall set_list_jump(const UINT Pos);
RTC6_API void __stdcall n_set_extstartpos_list(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_set_control_mode_list(const UINT CardNo, const UINT Mode);
RTC6_API void __stdcall n_simulate_ext_start(const UINT CardNo, const LONG Delay, const UINT EncoderNo);
RTC6_API void __stdcall set_extstartpos_list(const UINT Pos);
RTC6_API void __stdcall set_control_mode_list(const UINT Mode);
RTC6_API void __stdcall simulate_ext_start(const LONG Delay, const UINT EncoderNo);
RTC6_API void __stdcall n_list_return(const UINT CardNo);
RTC6_API void __stdcall n_list_call_repeat(const UINT CardNo, const UINT Pos, const UINT Number);
RTC6_API void __stdcall n_list_call_abs_repeat(const UINT CardNo, const UINT Pos, const UINT Number);
RTC6_API void __stdcall n_list_call(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_list_call_abs(const UINT CardNo, const UINT Pos);
RTC6_API void __stdcall n_sub_call_repeat(const UINT CardNo, const UINT Index, const UINT Number);
RTC6_API void __stdcall n_sub_call_abs_repeat(const UINT CardNo, const UINT Index, const UINT Number);
RTC6_API void __stdcall n_sub_call(const UINT CardNo, const UINT Index);
RTC6_API void __stdcall n_sub_call_abs(const UINT CardNo, const UINT Index);
RTC6_API void __stdcall list_return(void);
RTC6_API void __stdcall list_call_repeat(const UINT Pos, const UINT Number);
RTC6_API void __stdcall list_call_abs_repeat(const UINT Pos, const UINT Number);
RTC6_API void __stdcall list_call(const UINT Pos);
RTC6_API void __stdcall list_call_abs(const UINT Pos);
RTC6_API void __stdcall sub_call_repeat(const UINT Index, const UINT Number);
RTC6_API void __stdcall sub_call_abs_repeat(const UINT Index, const UINT Number);
RTC6_API void __stdcall sub_call(const UINT Index);
RTC6_API void __stdcall sub_call_abs(const UINT Index);
RTC6_API void __stdcall n_list_call_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);
RTC6_API void __stdcall n_list_call_abs_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);
RTC6_API void __stdcall n_sub_call_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);
RTC6_API void __stdcall n_sub_call_abs_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);
RTC6_API void __stdcall n_list_jump_pos_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Index);
RTC6_API void __stdcall n_list_jump_rel_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const LONG Index);
RTC6_API void __stdcall n_if_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall n_if_not_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall n_if_pin_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall n_if_not_pin_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall n_switch_ioport(const UINT CardNo, const UINT MaskBits, const UINT ShiftBits);
RTC6_API void __stdcall n_list_jump_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);
RTC6_API void __stdcall list_call_cond(const UINT Mask1, const UINT Mask0, const UINT Pos);
RTC6_API void __stdcall list_call_abs_cond(const UINT Mask1, const UINT Mask0, const UINT Pos);
RTC6_API void __stdcall sub_call_cond(const UINT Mask1, const UINT Mask0, const UINT Index);
RTC6_API void __stdcall sub_call_abs_cond(const UINT Mask1, const UINT Mask0, const UINT Index);
RTC6_API void __stdcall list_jump_pos_cond(const UINT Mask1, const UINT Mask0, const UINT Pos);
RTC6_API void __stdcall list_jump_rel_cond(const UINT Mask1, const UINT Mask0, const LONG Pos);
RTC6_API void __stdcall if_cond(const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall if_not_cond(const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall if_pin_cond(const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall if_not_pin_cond(const UINT Mask1, const UINT Mask0);
RTC6_API void __stdcall switch_ioport(const UINT MaskBits, const UINT ShiftBits);
RTC6_API void __stdcall list_jump_cond(const UINT Mask1, const UINT Mask0, const UINT Pos);
RTC6_API void __stdcall n_select_char_set(const UINT CardNo, const UINT No);
RTC6_API void __stdcall n_mark_text(const UINT CardNo, const char* Text);
RTC6_API void __stdcall n_mark_text_abs(const UINT CardNo, const char* Text);
RTC6_API void __stdcall n_mark_char(const UINT CardNo, const UINT Char);
RTC6_API void __stdcall n_mark_char_abs(const UINT CardNo, const UINT Char);
RTC6_API void __stdcall select_char_set(const UINT No);
RTC6_API void __stdcall mark_text(const char* Text);
RTC6_API void __stdcall mark_text_abs(const char* Text);
RTC6_API void __stdcall mark_char(const UINT Char);
RTC6_API void __stdcall mark_char_abs(const UINT Char);
RTC6_API void __stdcall n_mark_serial(const UINT CardNo, const UINT Mode, const UINT Digits);
RTC6_API void __stdcall n_mark_serial_abs(const UINT CardNo, const UINT Mode, const UINT Digits);
RTC6_API void __stdcall n_mark_date(const UINT CardNo, const UINT Part, const UINT Mode);
RTC6_API void __stdcall n_mark_date_abs(const UINT CardNo, const UINT Part, const UINT Mode);
RTC6_API void __stdcall n_mark_time(const UINT CardNo, const UINT Part, const UINT Mode);
RTC6_API void __stdcall n_mark_time_abs(const UINT CardNo, const UINT Part, const UINT Mode);
RTC6_API void __stdcall n_select_serial_set_list(const UINT CardNo, const UINT No);
RTC6_API void __stdcall n_set_serial_step_list(const UINT CardNo, const UINT No, const UINT Step);
RTC6_API void __stdcall n_time_fix_f_off(const UINT CardNo, const UINT FirstDay, const UINT Offset);
RTC6_API void __stdcall n_time_fix_f(const UINT CardNo, const UINT FirstDay);
RTC6_API void __stdcall n_time_fix(const UINT CardNo);
RTC6_API void __stdcall mark_serial(const UINT Mode, const UINT Digits);
RTC6_API void __stdcall mark_serial_abs(const UINT Mode, const UINT Digits);
RTC6_API void __stdcall mark_date(const UINT Part, const UINT Mode);
RTC6_API void __stdcall mark_date_abs(const UINT Part, const UINT Mode);
RTC6_API void __stdcall mark_time(const UINT Part, const UINT Mode);
RTC6_API void __stdcall mark_time_abs(const UINT Part, const UINT Mode);
RTC6_API void __stdcall time_fix_f_off(const UINT FirstDay, const UINT Offset);
RTC6_API void __stdcall select_serial_set_list(const UINT No);
RTC6_API void __stdcall set_serial_step_list(const UINT No, const UINT Step);
RTC6_API void __stdcall time_fix_f(const UINT FirstDay);
RTC6_API void __stdcall time_fix(void);
RTC6_API void __stdcall n_clear_io_cond_list(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Mask);
RTC6_API void __stdcall n_set_io_cond_list(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Mask);
RTC6_API void __stdcall n_write_io_port_mask_list(const UINT CardNo, const UINT Value, const UINT Mask);
RTC6_API void __stdcall n_write_8bit_port_list(const UINT CardNo, const UINT Value);
RTC6_API void __stdcall n_read_io_port_list(const UINT CardNo);
RTC6_API void __stdcall n_write_da_x_list(const UINT CardNo, const UINT x, const UINT Value);
RTC6_API void __stdcall n_write_io_port_list(const UINT CardNo, const UINT Value);
RTC6_API void __stdcall n_write_da_1_list(const UINT CardNo, const UINT Value);
RTC6_API void __stdcall n_write_da_2_list(const UINT CardNo, const UINT Value);
RTC6_API void __stdcall n_write_port_list(const UINT CardNo, const UINT Port, const UINT Value, const UINT NoDelay);
RTC6_API void __stdcall clear_io_cond_list(const UINT Mask1, const UINT Mask0, const UINT MaskClear);
RTC6_API void __stdcall set_io_cond_list(const UINT Mask1, const UINT Mask0, const UINT MaskSet);
RTC6_API void __stdcall write_io_port_mask_list(const UINT Value, const UINT Mask);
RTC6_API void __stdcall write_8bit_port_list(const UINT Value);
RTC6_API void __stdcall read_io_port_list(void);
RTC6_API void __stdcall write_da_x_list(const UINT x, const UINT Value);
RTC6_API void __stdcall write_io_port_list(const UINT Value);
RTC6_API void __stdcall write_da_1_list(const UINT Value);
RTC6_API void __stdcall write_da_2_list(const UINT Value);
RTC6_API void __stdcall write_port_list(const UINT Port, const UINT Value, const UINT NoDelay);
RTC6_API void __stdcall n_laser_signal_on_list(const UINT CardNo);
RTC6_API void __stdcall n_laser_signal_off_list(const UINT CardNo);
RTC6_API void __stdcall n_para_laser_on_pulses_list(const UINT CardNo, const UINT Period, const UINT Pulses, const UINT P);
RTC6_API void __stdcall n_laser_on_pulses_list(const UINT CardNo, const UINT Period, const UINT Pulses);
RTC6_API void __stdcall n_laser_on_list(const UINT CardNo, const UINT Period);
RTC6_API void __stdcall n_set_laser_delays(const UINT CardNo, const LONG LaserOnDelay, const UINT LaserOffDelay);
RTC6_API void __stdcall n_set_standby_list(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength);
RTC6_API void __stdcall n_set_laser_pulses(const UINT CardNo, const UINT HalfPeriod, const UINT PulseLength);
RTC6_API void __stdcall n_set_firstpulse_killer_list(const UINT CardNo, const UINT Length);
RTC6_API void __stdcall n_set_qswitch_delay_list(const UINT CardNo, const UINT Delay);
RTC6_API void __stdcall n_set_laser_pin_out_list(const UINT CardNo, const UINT Pins);
RTC6_API void __stdcall n_set_vector_control(const UINT CardNo, const UINT Ctrl, const UINT Value);
RTC6_API void __stdcall n_set_default_pixel_list(const UINT CardNo, const UINT PulseLength);
RTC6_API void __stdcall n_set_auto_laser_params_list(const UINT CardNo, const UINT Ctrl, const UINT Value, const UINT MinValue, const UINT MaxValue);
RTC6_API void __stdcall n_set_pulse_picking_list(const UINT CardNo, const UINT No);
RTC6_API void __stdcall n_set_softstart_level_list(const UINT CardNo, const UINT Index, const UINT Level1, const UINT Level2, const UINT Level3);
RTC6_API void __stdcall n_set_softstart_mode_list(const UINT CardNo, const UINT Mode, const UINT Number, const UINT Delay);