RTC6/RTC6 Files/Windows/RTC6Import.pas

procedure list_until(Number: LongWord); stdcall; external RTC6DLL;
procedure range_checking(HeadNo: LongWord; Mode: LongWord; Data: LongWord); stdcall; external RTC6DLL;
procedure store_timestamp_counter_list(); stdcall; external RTC6DLL;
procedure wait_for_timestamp_counter(TimeStampCounter: LongWord); stdcall; external RTC6DLL;
procedure wait_for_timestamp_counter_mode(TimeStampCounter: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure wait_for_timestamp_counter_long(WaitCounterL: LongWord; WaitCounterH: LongWord; MaxWaitTime: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure set_list_jump(Pos: LongWord); stdcall; external RTC6DLL;
procedure n_set_extstartpos_list(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_set_control_mode_list(CardNo: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_simulate_ext_start(CardNo: LongWord; Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC6DLL;
procedure set_extstartpos_list(Pos: LongWord); stdcall; external RTC6DLL;
procedure set_control_mode_list(Mode: LongWord); stdcall; external RTC6DLL;
procedure simulate_ext_start(Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC6DLL;
procedure n_list_return(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_list_call_repeat(CardNo: LongWord; Pos: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure n_list_call_abs_repeat(CardNo: LongWord; Pos: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure n_list_call(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_list_call_abs(CardNo: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_sub_call_repeat(CardNo: LongWord; Index: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure n_sub_call_abs_repeat(CardNo: LongWord; Index: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure n_sub_call(CardNo: LongWord; Index: LongWord); stdcall; external RTC6DLL;
procedure n_sub_call_abs(CardNo: LongWord; Index: LongWord); stdcall; external RTC6DLL;
procedure list_return(); stdcall; external RTC6DLL;
procedure list_call_repeat(Pos: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure list_call_abs_repeat(Pos: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure list_call(Pos: LongWord); stdcall; external RTC6DLL;
procedure list_call_abs(Pos: LongWord); stdcall; external RTC6DLL;
procedure sub_call_repeat(Index: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure sub_call_abs_repeat(Index: LongWord; Number: LongWord); stdcall; external RTC6DLL;
procedure sub_call(Index: LongWord); stdcall; external RTC6DLL;
procedure sub_call_abs(Index: LongWord); stdcall; external RTC6DLL;
procedure n_list_call_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_list_call_abs_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_sub_call_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_sub_call_abs_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_list_jump_pos_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Index: LongWord); stdcall; external RTC6DLL;
procedure n_list_jump_rel_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Index: LongInt); stdcall; external RTC6DLL;
procedure n_if_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure n_if_not_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure n_if_pin_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure n_if_not_pin_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure n_switch_ioport(CardNo: LongWord; MaskBits: LongWord; ShiftBits: LongWord); stdcall; external RTC6DLL;
procedure n_list_jump_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure list_call_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure list_call_abs_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure sub_call_cond(Mask1: LongWord; Mask0: LongWord; Index: LongWord); stdcall; external RTC6DLL;
procedure sub_call_abs_cond(Mask1: LongWord; Mask0: LongWord; Index: LongWord); stdcall; external RTC6DLL;
procedure list_jump_pos_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure list_jump_rel_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongInt); stdcall; external RTC6DLL;
procedure if_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure if_not_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure if_pin_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure if_not_pin_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC6DLL;
procedure switch_ioport(MaskBits: LongWord; ShiftBits: LongWord); stdcall; external RTC6DLL;
procedure list_jump_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC6DLL;
procedure n_select_char_set(CardNo: LongWord; No: LongWord); stdcall; external RTC6DLL;
procedure n_mark_text(CardNo: LongWord; Text: PChar); stdcall; external RTC6DLL;
procedure n_mark_text_abs(CardNo: LongWord; Text: PChar); stdcall; external RTC6DLL;
procedure n_mark_char(CardNo: LongWord; Char: LongWord); stdcall; external RTC6DLL;
procedure n_mark_char_abs(CardNo: LongWord; Char: LongWord); stdcall; external RTC6DLL;
procedure select_char_set(No: LongWord); stdcall; external RTC6DLL;
procedure mark_text(Text: PChar); stdcall; external RTC6DLL;
procedure mark_text_abs(Text: PChar); stdcall; external RTC6DLL;
procedure mark_char(Char: LongWord); stdcall; external RTC6DLL;
procedure mark_char_abs(Char: LongWord); stdcall; external RTC6DLL;
procedure n_mark_serial(CardNo: LongWord; Mode: LongWord; Digits: LongWord); stdcall; external RTC6DLL;
procedure n_mark_serial_abs(CardNo: LongWord; Mode: LongWord; Digits: LongWord); stdcall; external RTC6DLL;
procedure n_mark_date(CardNo: LongWord; Part: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_mark_date_abs(CardNo: LongWord; Part: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_mark_time(CardNo: LongWord; Part: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_mark_time_abs(CardNo: LongWord; Part: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure n_select_serial_set_list(CardNo: LongWord; No: LongWord); stdcall; external RTC6DLL;
procedure n_set_serial_step_list(CardNo: LongWord; No: LongWord; Step: LongWord); stdcall; external RTC6DLL;
procedure n_time_fix_f_off(CardNo: LongWord; FirstDay: LongWord; Offset: LongWord); stdcall; external RTC6DLL;
procedure n_time_fix_f(CardNo: LongWord; FirstDay: LongWord); stdcall; external RTC6DLL;
procedure n_time_fix(CardNo: LongWord); stdcall; external RTC6DLL;
procedure mark_serial(Mode: LongWord; Digits: LongWord); stdcall; external RTC6DLL;
procedure mark_serial_abs(Mode: LongWord; Digits: LongWord); stdcall; external RTC6DLL;
procedure mark_date(Part: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure mark_date_abs(Part: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure mark_time(Part: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure mark_time_abs(Part: LongWord; Mode: LongWord); stdcall; external RTC6DLL;
procedure time_fix_f_off(FirstDay: LongWord; Offset: LongWord); stdcall; external RTC6DLL;
procedure select_serial_set_list(No: LongWord); stdcall; external RTC6DLL;
procedure set_serial_step_list(No: LongWord; Step: LongWord); stdcall; external RTC6DLL;
procedure time_fix_f(FirstDay: LongWord); stdcall; external RTC6DLL;
procedure time_fix(); stdcall; external RTC6DLL;
procedure n_clear_io_cond_list(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Mask: LongWord); stdcall; external RTC6DLL;
procedure n_set_io_cond_list(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Mask: LongWord); stdcall; external RTC6DLL;
procedure n_write_io_port_mask_list(CardNo: LongWord; Value: LongWord; Mask: LongWord); stdcall; external RTC6DLL;
procedure n_write_8bit_port_list(CardNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_read_io_port_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_write_da_x_list(CardNo: LongWord; x: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_write_io_port_list(CardNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_write_da_1_list(CardNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_write_da_2_list(CardNo: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_write_port_list(CardNo: LongWord; Port: LongWord; Value: LongWord; NoDelay: LongWord); stdcall; external RTC6DLL;
procedure clear_io_cond_list(Mask1: LongWord; Mask0: LongWord; MaskClear: LongWord); stdcall; external RTC6DLL;
procedure set_io_cond_list(Mask1: LongWord; Mask0: LongWord; MaskSet: LongWord); stdcall; external RTC6DLL;
procedure write_io_port_mask_list(Value: LongWord; Mask: LongWord); stdcall; external RTC6DLL;
procedure write_8bit_port_list(Value: LongWord); stdcall; external RTC6DLL;
procedure read_io_port_list(); stdcall; external RTC6DLL;
procedure write_da_x_list(x: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure write_io_port_list(Value: LongWord); stdcall; external RTC6DLL;
procedure write_da_1_list(Value: LongWord); stdcall; external RTC6DLL;
procedure write_da_2_list(Value: LongWord); stdcall; external RTC6DLL;
procedure write_port_list(Port: LongWord; Value: LongWord; NoDelay: LongWord); stdcall; external RTC6DLL;
procedure n_laser_signal_on_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_laser_signal_off_list(CardNo: LongWord); stdcall; external RTC6DLL;
procedure n_para_laser_on_pulses_list(CardNo: LongWord; Period: LongWord; Pulses: LongWord; P: LongWord); stdcall; external RTC6DLL;
procedure n_laser_on_pulses_list(CardNo: LongWord; Period: LongWord; Pulses: LongWord); stdcall; external RTC6DLL;
procedure n_laser_on_list(CardNo: LongWord; Period: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_delays(CardNo: LongWord; LaserOnDelay: LongInt; LaserOffDelay: LongWord); stdcall; external RTC6DLL;
procedure n_set_standby_list(CardNo: LongWord; HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_pulses(CardNo: LongWord; HalfPeriod: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure n_set_firstpulse_killer_list(CardNo: LongWord; Length: LongWord); stdcall; external RTC6DLL;
procedure n_set_qswitch_delay_list(CardNo: LongWord; Delay: LongWord); stdcall; external RTC6DLL;
procedure n_set_laser_pin_out_list(CardNo: LongWord; Pins: LongWord); stdcall; external RTC6DLL;
procedure n_set_vector_control(CardNo: LongWord; Ctrl: LongWord; Value: LongWord); stdcall; external RTC6DLL;
procedure n_set_default_pixel_list(CardNo: LongWord; PulseLength: LongWord); stdcall; external RTC6DLL;
procedure n_set_auto_laser_params_list(CardNo: LongWord; Ctrl: LongWord; Value: LongWord; MinValue: LongWord; MaxValue: LongWord); stdcall; external RTC6DLL;
procedure n_set_pulse_picking_list(CardNo: LongWord; No: LongWord); stdcall; external RTC6DLL;
procedure n_set_softstart_level_list(CardNo: LongWord; Index: LongWord; Level1: LongWord; Level2: LongWord; Level3: LongWord); stdcall; external RTC6DLL;
procedure n_set_softstart_mode_list(CardNo: LongWord; Mode: LongWord; Number: LongWord; Delay: LongWord); stdcall; external RTC6DLL;
